Main page in work

--- a/QuizApp-SPA/src/app/modules/start-page/components/start-page/start-page.component.html
+++ b/QuizApp-SPA/src/app/modules/start-page/components/start-page/start-page.component.html
@@ -1,3 +1,7 @@
-<p>
-  start-page works!
-</p>
+<form class="container">
+
+  <div class='toolbar'>
+    <img src="../../../../../assets/images/account.png" width="71px" height="71px" alt="account image">
+  </div>
+
+</form>
