--- a/QuizApp-SPA/src/app/modules/start-page/components/start-page/start-page.component.html
+++ b/QuizApp-SPA/src/app/modules/start-page/components/start-page/start-page.component.html
@@ -1,7 +1,16 @@
 <form class="container">
 
   <div class='toolbar'>
-    <img src="../../../../../assets/images/account.png" width="71px" height="71px" alt="account image">
+    <mat-form-field appearance="outline">
+      <mat-label></mat-label>
+      <input matInput placeholder="">
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+    <button mat-stroked-button class="newquiz-btn">Basic</button>
+    <!-- {{User.name.value}} -->
+    <a>User1</a>
+    <img src="../../../../../assets/images/account.png" class="acc-icon" alt="account image">
+    
   </div>
 
 </form>
