--- a/QuizApp-SPA/src/app/modules/start-page/components/start-page/start-page.component.scss
+++ b/QuizApp-SPA/src/app/modules/start-page/components/start-page/start-page.component.scss
@@ -5,11 +5,30 @@
 }
 
 .toolbar {
+    display: inline-flex;
+    justify-content: flex-end;
+    align-items: center;
     width: 100%;
-    height: 80px;
+    height: 50px;
     background-color: #EFEFEF;
-}
 
-img {
+  .acc-icon {
+        width: 55px;
+        height: 50px;
+    }
 
+    button { 
+        color: white;
+        background-color: #57CBD2;
+        width: 100px;
+        height: 35px;
+        border-radius: 60px;
+    }
+
+    .newquiz-btn {
+        margin: 20px;
+    }
+    ::ng-deep .mat-form-field-appearance-outline .mat-form-field-flex {
+        height: 10px;
+    }
 }
