--- a/QuizApp-SPA/src/app/modules/start-page/components/start-page/start-page.component.html
+++ b/QuizApp-SPA/src/app/modules/start-page/components/start-page/start-page.component.html
@@ -10,4 +10,5 @@
     <a>User1</a>
     <img src="../../../../../assets/images/account.png" class="acc-icon" alt="account image">
   </div>
+  <app-hamburger></app-hamburger>
 </form>
