Register view and service

--- a/QuizApp-SPA/src/app/modules/auth/components/login/login.component.html
+++ b/QuizApp-SPA/src/app/modules/auth/components/login/login.component.html
@@ -5,20 +5,20 @@
   <br>
 
   <div class="login-text">
-    <p>Logowanie</p>
+    <p>Login</p>
   </div>
 
   <form [formGroup]="loginForm" style="display:flex; flex-direction: column;">
     <mat-form-field class="form-input" appearance="outline">
       <mat-label>Login</mat-label>
-      <input formControlName="username" matInput placeholder="Podaj swój login">
+      <input formControlName="username" matInput placeholder="Enter your login">
       <mat-icon matSuffix>
         <span class="material-icons">login</span>
       </mat-icon>
     </mat-form-field>
   
     <mat-form-field class="form-input" appearance="outline">
-      <mat-label>Hasło</mat-label>
+      <mat-label>Password</mat-label>
       <input formControlName="password" matInput [type]="hide ? 'password' : 'text'">
       <mat-icon matSuffix>
         <span class="material-icons">vpn_key</span>
@@ -27,7 +27,7 @@
   </form>
 
   <button (click)="login()" class="log-in" mat-raised-button aria-label="Example icon button with a delete icon">ZALOGUJ</button>
-  <p class="cant-sign">Nie możesz się zalogować?</p>
-  <button class="register" mat-raised-button>Nie mam konta</button>
+  <p class="cant-sign">You cannot log in?</p>
+  <button class="register" mat-raised-button>I don't have an account</button>
 
 </div>
