--- a/QuizApp-SPA/src/styles.scss
+++ b/QuizApp-SPA/src/styles.scss
@@ -41,3 +41,7 @@ body {
 }
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@font-face {
+  font-family: 'Salsa';
+  src: url('https://fonts.google.com/specimen/Salsa?sidebar.open=true&selection.family=Salsa') format('opentype');
+}
