--- a/QuizApp-SPA/src/app/modules/home/components/hamburger/hamburger.component.scss
+++ b/QuizApp-SPA/src/app/modules/home/components/hamburger/hamburger.component.scss
@@ -1,28 +1,38 @@
 .container {
-
-  display: list-item;
+  margin-top: 10px;
+  width: 150px;
+  display: block;
   justify-content: center;
   align-items: center;
-
-.header {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 45px;
-  background-color: #E0DCDC;
-  border-bottom: 5px solid #E0DCDC;
-}
-.hamburger {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: 20px;
-  overflow: hidden;
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-bottom: #57CBD2 5px solid;
-}
+
+  .header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    width: 100%;
+    height: 45px;
+    background-color: #E0DCDC;
+    border-bottom: 5px solid #E0DCDC;
+  }
+
+  .hamburger {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    width: 120%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    a {
+      width: 100%;
+      text-align: center;
+      margin-top: 3px;
+      border-bottom: #57CBD2 5px solid;
+    }
+  }
 }
