--- a/src/QuizAppClient/src/app/modules/home/components/start-page/start-page.component.scss
+++ b/src/QuizAppClient/src/app/modules/home/components/start-page/start-page.component.scss
@@ -15,13 +15,13 @@
       height: 100%;
       display: flex;
       align-items: center;
-      justify-content: start;
+      justify-content: flex-start;
       flex-direction: column;
 
       .hamburger-btn {
-        align-items: start;
+        align-items: flex-start;
         display: flex;
-        justify-content: start;
+        justify-content: flex-start;
       }
     }
 
