--- a/src/QuizAppClient/src/app/modules/home/components/quiz-card/quiz-card.component.html
+++ b/src/QuizAppClient/src/app/modules/home/components/quiz-card/quiz-card.component.html
@@ -1,3 +1,4 @@
+<div>
 <mat-card class="quiz-card" *ngFor="let quiz of quizList">
   <mat-card-header>
     <div mat-card-avatar><img src="{{quiz.imageUrl}}" class="quiz-img"></div>
@@ -5,7 +6,8 @@
   <mat-card-content>
     <mat-card-title class="tittle">{{quiz.name}}</mat-card-title>
     <mat-card-subtitle class="category">{{quiz.category.name}}</mat-card-subtitle> 
-    <p> {{quiz.description}} </p>
+    <p class="description"> {{quiz.description}} </p>
     
   </mat-card-content>
 </mat-card>
+</div>
