add service and quests

--- a/src/QuizAppClient/src/app/modules/quiz/components/quiz/quiz.component.html
+++ b/src/QuizAppClient/src/app/modules/quiz/components/quiz/quiz.component.html
@@ -1,6 +1,12 @@
 <app-toolbar></app-toolbar>
 <div class="container">
-    <div class="content">
-
+    <div class="content" *ngFor="let item of quests">
+        <img src="{{item.imageUrl}}" width="250px" height="250px">
+        <p>{{item.description}}</p>
+        <button mat-raised-button>{{item.answerA}}</button>
+        <button mat-raised-button>{{item.answerB}}</button>
+        <button mat-raised-button>{{item.answerC}}</button>
+        <button mat-raised-button>{{item.answerD}}</button>
+        
     </div>
 </div>
