--- a/src/QuizAppMainClient/src/app/shared/modules/toolbar/toolbar.component.html
+++ b/src/QuizAppMainClient/src/app/shared/modules/toolbar/toolbar.component.html
@@ -1,3 +1,14 @@
-<p>
-  toolbar works!
-</p>
+<div class="container">
+  <div class="left">
+    <img src="../../../../assets/images/icon.png" class="icon">
+  </div>
+  <div class="right">
+    <mat-form-field appearance="outline" class="search">
+      <input matInput placeholder="Let's find quiz">
+      <mat-icon matSuffix>search</mat-icon>
+    </mat-form-field>
+    
+    <button mat-raised-button class="action-btn">Sth else</button>
+   <button mat-raised-button class="action-btn">Log Into</button>
+  </div>
+</div>
