--- a/src/QuizAppMainClient/src/app/modules/dashboard/container/dashboard-container/dashboard-container.component.html
+++ b/src/QuizAppMainClient/src/app/modules/dashboard/container/dashboard-container/dashboard-container.component.html
@@ -1,4 +1,4 @@
 <app-toolbar></app-toolbar>
-<p>
-  dashboard-container works!
-</p>
+<div class="container">
+  <app-dashboard-header></app-dashboard-header>
+</div>
