--- a/src/QuizAppMainClient/src/app/modules/dashboard/container/dashboard-container/dashboard-container.component.html
+++ b/src/QuizAppMainClient/src/app/modules/dashboard/container/dashboard-container/dashboard-container.component.html
@@ -1,4 +1,5 @@
 <app-toolbar></app-toolbar>
 <div class="container">
   <app-dashboard-header></app-dashboard-header>
+  <app-dashboard-category></app-dashboard-category>
 </div>
