--- a/src/QuizAppMainClient/src/app/modules/dashboard/presenter/dashboard-header/dashboard-header.component.scss
+++ b/src/QuizAppMainClient/src/app/modules/dashboard/presenter/dashboard-header/dashboard-header.component.scss
@@ -2,7 +2,7 @@
 
 .container {
   width: 100%;
-  height: 40%;
+  height: 20%;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -14,5 +14,7 @@
   .search {
     width: 60%;
     background-color: $main-bg-color;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    border-radius: 20px;
   }
 }
