--- a/src/QuizAppAdminClient/src/app/core/layouts/main-layout/main-layout.component.html
+++ b/src/QuizAppAdminClient/src/app/core/layouts/main-layout/main-layout.component.html
@@ -1,5 +1,3 @@
-<div class="container">
-    <app-menu *ngIf="router.url !== '/'"></app-menu>
+<app-menu>
     <router-outlet></router-outlet>
-</div>
-
+</app-menu>
