--- a/src/QuizAppAdminClient/src/app/modules/auth/container/auth-container/auth-container.component.scss
+++ b/src/QuizAppAdminClient/src/app/modules/auth/container/auth-container/auth-container.component.scss
@@ -1,18 +1,6 @@
 .container {
     width: 100%;
+    height: 100%;
+    background-color: #2F3C4E;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    form {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        color: black;
-        
-        mat-form-field {
-            width: 400px;
-        }
-    }
 }
