--- a/src/QuizAppAdminClient/src/app/modules/main/container/main-container/main-container.component.html
+++ b/src/QuizAppAdminClient/src/app/modules/main/container/main-container/main-container.component.html
@@ -1,3 +1,29 @@
-<p>
-  main-container works!
-</p>
+<div class="container">
+  <h2>Cateogry</h2>
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="type for category" #input>
+  </mat-form-field>
+  
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>id</th>
+      <td mat-cell *matCellDef="let element"> {{element.categoryId}} </td>
+    </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="doneQuizzes">
+      <th mat-header-cell *matHeaderCellDef>Done Quizzes</th>
+      <td mat-cell *matCellDef="let element"> {{element.doneQuizzess}} </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
+</div>
