--- a/src/QuizAppMainClient/src/app/modules/dashboard/presenter/dashboard-category/dashboard-category.component.scss
+++ b/src/QuizAppMainClient/src/app/modules/dashboard/presenter/dashboard-category/dashboard-category.component.scss
@@ -1,23 +1,13 @@
 .container {
     width: 100%;
     display: flex;
-    justify-content: flex-end;
-    .main-container {
-        width: 100%;
-        display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
-        align-items: flex-end;
-        justify-content: center;
-    }
+    flex-direction: column;
+
     .categories {
         width: 100%;
         display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
-        align-items: flex-end;
-        justify-content: center;
-
+        justify-content: flex-end;
+        flex-direction: row;        
         .header {
             width: 90%;
             margin-right: 2px;
@@ -33,11 +23,11 @@
             display: flex;
             justify-content: start;
             align-items: flex-start;      
+            margin: 20px 0 20px 0;
             
-            app-dashboard-card {
-                margin-right: 10px;
-                
-            }
+
+
+            
         }
     }
 
